content/terraform-enterprise/1.2.x/docs/enterprise/api-docs/diagnostics.mdx
---
page_title: Diagnostics API reference for Terraform Enterprise
description: >-
  Use the Diagnostics API endpoint to perform comprehensive health diagnostics of all Terraform Enterprise subsystems.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-02-03T16:18:24-05:00
last_modified: 2026-02-05T15:57:12-05:00
# END AUTO GENERATED METADATA
---

# Diagnostics API reference

The diagnostics endpoint performs comprehensive health diagnostics of all Terraform Enterprise subsystems. It returns detailed status information for each component, including warnings and errors. You can customize the timeout and filter specific checks.

## Perform diagnostics

This endpoint runs diagnostic checks on Terraform Enterprise subsystems. Authentication is required to use this endpoint. To generate a token for the endpoint, refer to [Generate a system API token](/terraform/enterprise/deploy/reference/cli#generate-a-system-api-token) in the CLI reference documentation.

`GET /api/v1/diagnostics`

### Query parameters

| Parameter | Type | Description |
| --- | --- | --- |
| `timeout` | integer | Optional. Diagnostic check timeout in seconds. Valid range is `1`-`300`. Default is `30`. |
| `check` | array of strings | Optional. Filter checks to run by group or specific checks. Format: `{group_name}` or `{group_name.check_name}`. Use commas to separate multiple values in the URL, for example: `?check=redis,database.valid_config`. If omitted, all checks run. |

### Sample request

```shell
curl \
  --header "Authorization: Bearer $TOKEN" \
  --request GET \
  "https://tfe.example.com:8443/api/v1/diagnostics?timeout=60&check=redis,database"
```

### Sample response

```json
[
  {
    "node": "84ebea16aab1",
    "status": "OK",
    "created_at": "2026-02-03T21:26:27.985512712Z",
    "duration": 0.071152,
    "checks": [
      {
        "group": "redis",
        "status": "OK",
        "checks": [
          {
            "name": "connection",
            "status": "OK"
          },
          {
            "name": "config",
            "status": "OK"
          },
          {
            "name": "version",
            "status": "OK"
          },
          {
            "name": "permissions",
            "status": "OK"
          }
        ]
      },
      {
        "group": "database",
        "status": "OK",
        "checks": [
          {
            "name": "connection",
            "status": "OK"
          },
          {
            "name": "version",
            "status": "OK"
          },
          {
            "name": "extensions",
            "status": "OK"
          },
          {
            "name": "user_permissions",
            "status": "OK"
          }
        ]
      }
    ]
  }
]
```

### Response attributes

The endpoint returns an array of diagnostic results with the following attributes. The response includes one array of results per node.

| Attribute | Type | Description |
| --- | --- | --- |
| `node` | string | Name of the node that performed the diagnostics |
| `status` | string | Overall status of the diagnostics for this node: `OK`, `WARNING`, or `ERROR`. If subchecks have different statuses, the `status` is set to the highest severity: `ERROR` takes precedence over `WARNING`, which takes precedence over `OK`. |
| `created_at` | datetime | When the diagnostics were performed |
| `duration` | float | Time taken to run diagnostics in seconds |
| `checks` | array of objects | Detailed results for each check group |
| `checks[].group` | string | Name of the check group |
| `checks[].status` | string | Status of the group: `OK`, `WARNING`, or `ERROR` |
| `checks[].checks` | array of objects | Individual checks within the group |
| `checks[].checks[].name` | string | Name of the individual check |
| `checks[].checks[].status` | string | Status of the check: `OK`, `WARNING`, or `ERROR` |

### Response codes

| Status | Response | Reason |
| --- | --- | --- |
| [200][] | [JSON API document][] | Diagnostics completed successfully |
| [400][] | [JSON API error object][] | Invalid request parameters, such as timeout out of range |
| [406][] | [JSON API error object][] | Only `application/json` is supported |
| [429][] | [JSON API error object][] | Another diagnostic check is already running |
| [503][] | [JSON API document][] | One or more checks failed |

@include "api-code-blocks/system-api.mdx"